[package]
name = "try_tup_to_arr"
version = "0.1.0"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/try_tup_to_arr"
homepage = "https://github.com/pic16f877ccs/try_tup_to_arr"
license = "GPL-3.0-or-later"
description = "Library for implement tuple to array trait"
keywords = ["no-std", "try-tuple-convert", "tuple-to-array"]
categories = ["rust-patterns","no-std"]

[lib]
name = "try_tup_to_arr"

[dependencies]
try_from_int_str = { version = "0.4.0", git = "https://github.com/pic16f877ccs/try_from_int_str" }
try_tup_to_arr_macro = { version = "0.1.0", git = "https://github.com/pic16f877ccs/try_tup_to_arr_macro" }

[features]
try_tup_to_arr8 = ["try_tup_to_arr_macro/try_tup_to_arr_8"]
try_tup_to_arr16 = ["try_tup_to_arr_macro/try_tup_to_arr_16"]

default = ["try_tup_to_arr8"]
